--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -125,10 +125,10 @@
                 
                 <div class="social-icons">
                     <a href="{{ path('connect_facebook') }}" class="facebook" title="Login with Facebook">
-                        <i class="fab fa-facebook-f"></i>
+                       <i class='bx bxl-facebook' ></i>
                     </a>
                     <a href="{{ path('connect_google') }}" class="google" title="Login with Google">
-                        <i class="fab fa-google"></i>
+                        <i class='bx bxl-google' ></i>
                     </a>
                 </div>
             </form>
